fixed banner media queries causing overflow

--- a/src/sass/z_media-queries.scss
+++ b/src/sass/z_media-queries.scss
@@ -110,6 +110,9 @@
     .image {
       display: none;
     }
+    .lefticon {
+      display: none;
+    }
     .text {
       margin-left: 2rem;
     }
